fix: fix blur not working on Safari

--- a/public/style.css
+++ b/public/style.css
@@ -112,6 +112,7 @@ main {
 
 .wallpaper .app-tile {
   background-color: rgba(255, 255, 255, 0.15);
+  -webkit-backdrop-filter: blur(33px); /* Safari */
   backdrop-filter: blur(33px);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
